-
Bug
-
Resolution: Done
-
P1: Critical
-
5.1.0 Beta 1
-
None
-
Change-Id: Iea9e2c81efb46bb7875c70ccda0cdc4b3b3e58e7
The new approach of using a Window{} and a QQmlApplicationEngine sets up some more non-visual stuff, but is missing some of the setup done in QQuickView. Specifically, setting an incubation controller to allow asynchronous loading.
int main(int argc, char* argv[]) { QGuiApplication gapp(argc, argv); QQmlApplicationEngine eng("test.qml"); qDebug() << &eng << eng.incubationController(); return gapp.exec(); }
- relates to
-
QTBUG-31492 ListView creates and destroys delegates infinitely under certain conditions
-
- Closed
-
For Gerrit Dashboard: QTBUG-31203 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
57624,1 | QQuickWindow switches the engine's incubation controller on mouse enter | release | qt/qtdeclarative | Status: ABANDONED | -1 | 0 |
57664,2 | qmlscene: if top-level is a QQuickWindow, set incubation controller | release | qt/qtdeclarative | Status: MERGED | +2 | 0 |
57680,7 | Simplify example code by using QmlApplicationEngine | release | qt/qtquickcontrols | Status: MERGED | +2 | 0 |
57705,4 | Set incubation controller when a Window{} is loaded via QQmlApplicationEngine | release | qt/qtdeclarative | Status: MERGED | +2 | 0 |
57991,1 | Set incubation controller when a Window{} is loaded via QQmlApplicationEngine | stable | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |